# airbnb-clone

./: pyproject.toml
config/: pratice.py  settings.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_house_pets_allowed.py
